{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 25,
  "lineage": "5b5f492d-2487-4c22-ddfc-ba40132f4b17",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/networkSecurityGroups/learn-hcp-test2-nsg",
            "location": "westus2",
            "name": "learn-hcp-test2-nsg",
            "resource_group_name": "learn-hcp-test2-gid",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/routeTables/learn-hcp-test2-rt",
            "location": "westus2",
            "name": "learn-hcp-test2-rt",
            "resource_group_name": "learn-hcp-test2-gid",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.hcp_peering",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "learn-hcp-test2-gid",
            "virtual_network_name": "learn-hcp-test2-vnet"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "learn-hcp-test2-gid",
            "virtual_network_name": "learn-hcp-test2-vnet"
          }
        }
      ]
    },
    {
      "module": "module.hcp_peering",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "b7b6543e-e55f-4c7f-bf6d-d8d808770b52",
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet",
            "location": "westus2",
            "name": "learn-hcp-test2-vnet",
            "resource_group_name": "learn-hcp-test2-gid",
            "tags": {
              "ENV": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.hcp_peering",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "hcp_consul_existing_sg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Consul LAN Serf (tcp)",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8301",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/networkSecurityGroups/learn-hcp-test2-nsg/securityRules/learn-hcp-test2-consul-lan-tcp",
            "name": "learn-hcp-test2-consul-lan-tcp",
            "network_security_group_name": "learn-hcp-test2-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "learn-hcp-test2-gid",
            "source_address_prefix": "172.25.32.0/20",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "hcp_hvn.hvn"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Consul LAN Serf (udp)",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8301",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/networkSecurityGroups/learn-hcp-test2-nsg/securityRules/learn-hcp-test2-consul-lan-udp",
            "name": "learn-hcp-test2-consul-lan-udp",
            "network_security_group_name": "learn-hcp-test2-nsg",
            "priority": 101,
            "protocol": "Udp",
            "resource_group_name": "learn-hcp-test2-gid",
            "source_address_prefix": "172.25.32.0/20",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "hcp_hvn.hvn"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "learn-hcp-test2-gid",
            "virtual_network_name": "learn-hcp-test2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet2",
            "name": "subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "learn-hcp-test2-gid",
            "virtual_network_name": "learn-hcp-test2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet1",
            "network_security_group_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/networkSecurityGroups/learn-hcp-test2-nsg",
            "subnet_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet2",
            "network_security_group_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/networkSecurityGroups/learn-hcp-test2-nsg",
            "subnet_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet1",
            "route_table_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/routeTables/learn-hcp-test2-rt",
            "subnet_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.rt",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet2",
            "route_table_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/routeTables/learn-hcp-test2-rt",
            "subnet_id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.rt",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b7b6543e-e55f-4c7f-bf6d-d8d808770b52",
            "id": "/subscriptions/c9ed8610-47a3-4107-a2b2-a322114dfb29/resourceGroups/learn-hcp-test2-gid/providers/Microsoft.Network/virtualNetworks/learn-hcp-test2-vnet",
            "location": "westus2",
            "name": "learn-hcp-test2-vnet",
            "resource_group_name": "learn-hcp-test2-gid",
            "tags": {
              "ENV": "test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}